# src/types/responses/informplus/dimensionMembers/dimensionMembers.response.ts
@@ -1,0 +1,8 @@
+export interface IDimensionMemberGetResponse {
+  'dimensionMember-array': DimensionMember[]
+}
+
+export interface DimensionMember {
+  identifier: string
+  label: string
+}
