# src/types/responses/informplus/dimensionMembers/dimensionMembersIdentifier.response.ts
@@ -1,0 +1,5 @@
+import { DimensionMembersVerbose } from './dimensionMembersVerbose.response'
+
+export interface IDimensionMembersIdentifierGetResponse {
+  dimensionMember: DimensionMembersVerbose
+}
