# src/types/responses/informplus/dimensions/dimension.response.ts
@@ -1,0 +1,5 @@
+import { Dimension } from '../dimensionMembers/dimensionMembersVerbose.response'
+
+export interface IDimensionsGetResponse {
+  'dimension-array': Dimension[]
+}
